[package]
name = "brian-s-brain"
version = "0.1.0"
edition = "2021"
authors = ["Cyprien Borée <cyprien.boree@tuta.io>"]

[dependencies]
bytemuck = "1.12.3"
clap = { version = "4.0.29", features = ["derive"] }
rand = "0.8.5"
vulkano = "0.32.3"
vulkano-win = "0.32.0"
vulkano-shaders = "0.32.0"
winit = "0.27.5"
winit_input_helper = "0.13.0"
